[project]
name = "fmqa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dwave-samplers>=1.7.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
]

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = [
    "I",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
